SAK-14436 Replace sun.misc.BASE64Encoder with commons-codec version
git-svn-id: https://source.sakaiproject.org/svn/providers/trunk@52650 66ffb92e-73f9-0310-93c1-f5514f145a0a